@@ -1,9 +1,8 @@
 export(.helpForCall, .tryHelp)
 
 export("?", CRAN.packages, Rprof, apropos, assignInNamespace,
-       as.person, as.personList, browseEnv, browseURL,
-       bug.report, capture.output, checkCRAN,
-       citation, citEntry, citHeader,
+       as.person, as.personList, browseEnv, browseURL, bug.report,
+       capture.output, checkCRAN, citation, citEntry, citHeader,
        citFooter, close.socket, compareVersion, contrib.url, data,
        data.entry, dataentry, de, de.ncols, de.restore, de.setup,
        debugger, demo, download.file, download.packages, dump.frames,
@@ -12,11 +11,11 @@ export("?", CRAN.packages, Rprof, apropos, assignInNamespace,
        help.search, help.start, history, index.search,
        install.packages, installed.packages, limitedLabels,
        loadhistory, ls.str, lsf.str, make.packages.html, make.socket,
-       menu, methods, mirror2html,
-       object.size, old.packages, package.contents,
-       package.skeleton, packageDescription, packageStatus, page,
-       person, personList, pico, prompt, promptData, readCitationFile,
-       read.fwf, read.fortran, read.socket, recover, remove.packages,
+       menu, methods, mirror2html, new.packages, object.size,
+       old.packages, package.contents, package.skeleton,
+       packageDescription, packageStatus, page, person, personList,
+       pico, prompt, promptData, readCitationFile, read.fwf,
+       read.fortran, read.socket, recover, remove.packages,
        savehistory, str, sessionInfo, summaryRprof, tail, topicName,
        toBibtex, toLatex, update.packageStatus, update.packages,
        upgrade, url.show, vi, vignette, write.socket, wsbrowser,
